# ComfyUI-OCIO

./: .dockerignore  .gitignore  ATTRIBUTION.md  CHANGELOG.md  README.md  __init__.py  docker-compose.yml  grade_nodes.py  io_nodes.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: docker-tests.yml
docker/: Dockerfile  build_workflow.py  comfyui_client.py  compare_histograms.py  ocio_names.py  roundtrip_test.py  run_tests.sh
docs/: DOCKER.md
example_workflows/: OCIO_Nodes.json  warm_demo.cube
tools/: test_acescct.py  test_cache_parity.py  test_colorspace_parity.py  test_grade.py  test_io_convert.py  test_logc4.py  test_logcurves.py  test_ocio_nodes.py
tools/accuracy/: .gitignore  README.md  _common.py  gen_fixtures.py  measure_deltaE_colorchecker.py  measure_gamut_volume.py  measure_hdr_safety.py  measure_histogram_compare.py  measure_log_curves.py  measure_ocio_parity.py  measure_quantisation_dither.py  measure_roundtrip.py
web/: ocio_io.js  ocio_swap.js  ocio_upload.js  ocio_video_io.js
