[project]
name = "comfyui-ocio"
description = "Nuke-style OpenColorIO color nodes for ComfyUI. Read a still/sequence/video, grade in ACES, write EXR/TIFF/PNG/JPEG or ProRes/DNxHR/h264/hevc - fully color-managed. Eight nodes: Read, Write, ColorSpace, LogConvert, Display, CDLTransform, FileTransform, LookTransform."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "opencolorio>=2.2",
    "opencv-python-headless",
    "tifffile",
    "Pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/SlavaSexton/ComfyUI-OCIO"

[tool.comfy]
# Set PublisherId to your registry.comfy.org publisher handle before `comfy node publish`.
PublisherId = ""
DisplayName = "ComfyUI-OCIO"
Icon = "https://raw.githubusercontent.com/SlavaSexton/ComfyUI-OCIO/main/docs/assets/cover.png"
includes = []
